fix: main overflow; add classname to main section

--- a/src/app/scss/pages/services/index.scss
+++ b/src/app/scss/pages/services/index.scss
@@ -1,3 +1,7 @@
+[aria-label="Main content"].services {
+    overflow: visible;
+}
+
 #service-hero {
     .hero__bg-image {
         background-image: url('/images/services/hero-service.webp');
